--- a/templates/home.html
+++ b/templates/home.html
@@ -54,7 +54,7 @@
             
             <div class="products-container">
                 <div class="product">
-                 <!--  <img src="{% static 'images/classic.jpg' %}" alt="Zupra Classic" class="product-image">  -->
+                    <img src="{% static 'images/classic.jpg' %}" alt="Zupra Classic" class="product-image">
                     <h3 class="product-title">Classic Edition</h3>
                     <p>Our signature blend with interactive cocktail recipes and mixology tips</p>
                 </div>
@@ -72,7 +72,7 @@
                 </div>
             </div>
         </div>
-    </section>  {% endcomment %}
+    </section> {% endcomment %}
 
     <!-- Partners Section -->
     <section class="partners">
