--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -5,7 +5,7 @@
             <span class="tagline">THE BEVERAGE THAT TALKS BACK</span>
         </div>
 
-        <nav class="nav-desktop">
+        {% comment %} <nav class="nav-desktop">
             <ul class="nav-links">
                 <li><a href="{% url 'home' %}">Home</a></li>
                 <li><a href="{% url 'about' %}">About Us</a></li>
@@ -13,7 +13,7 @@
                 <li><a href="{% url 'partners' %}">Partners</a></li>
                 <li><a href="{% url 'contact' %}">Contact</a></li>
             </ul>
-        </nav>
+        </nav> {% endcomment %}
 
         <button class="mobile-menu-btn" id="mobileMenuBtn">
             <i class="fas fa-bars"></i>
