--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -30,11 +30,11 @@
             <i class="fas fa-times"></i>
         </button>
     </div>
-    <ul class="mobile-nav-links">
+    {% comment %} <ul class="mobile-nav-links">
         <li><a href="{% url 'home' %}">Home</a></li>
         <li><a href="{% url 'about' %}">About Us</a></li>
         <li><a href="{% url 'products' %}">Products</a></li>
         <li><a href="{% url 'partners' %}">Partners</a></li>
         <li><a href="{% url 'contact' %}">Contact</a></li>
-    </ul>
+    </ul> {% endcomment %}
 </div>
