--- a/templates/home.html
+++ b/templates/home.html
@@ -46,7 +46,7 @@
         </div>
     </section>
 
-    {% comment %} <!-- Products Section -->
+    <!-- Products Section -->
     <section id="products" class="products">
         <div class="container">
             <h2 class="section-title">Our Products</h2>
@@ -72,7 +72,7 @@
                 </div>
             </div>
         </div>
-    </section> {% endcomment %}
+    </section>
 
     <!-- Partners Section -->
     <section class="partners">
