--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -5,15 +5,14 @@
             <span class="tagline">THE BEVERAGE THAT TALKS BACK</span>
         </div>
 
-        {% comment %} <nav class="nav-desktop">
+        <nav class="nav-desktop">
             <ul class="nav-links">
-                <li><a href="{% url 'home' %}">Home</a></li>
-                <li><a href="{% url 'about' %}">About Us</a></li>
-                <li><a href="{% url 'products' %}">Products</a></li>
-                <li><a href="{% url 'partners' %}">Partners</a></li>
-                <li><a href="{% url 'contact' %}">Contact</a></li>
-            </ul>
-        </nav> {% endcomment %}
+                    <li><a href="/about/">About Us</a></li>
+                    <li><a href="/products/">Products</a></li>
+                    <li><a href="/partners/">Partners</a></li>
+                    <li><a href="/contact/">Contact</a></li>
+                </ul>
+        </nav>
 
         <button class="mobile-menu-btn" id="mobileMenuBtn">
             <i class="fas fa-bars"></i>
@@ -30,11 +29,10 @@
             <i class="fas fa-times"></i>
         </button>
     </div>
-    {% comment %} <ul class="mobile-nav-links">
-        <li><a href="{% url 'home' %}">Home</a></li>
-        <li><a href="{% url 'about' %}">About Us</a></li>
-        <li><a href="{% url 'products' %}">Products</a></li>
-        <li><a href="{% url 'partners' %}">Partners</a></li>
-        <li><a href="{% url 'contact' %}">Contact</a></li>
-    </ul> {% endcomment %}
+    <ul class="mobile-nav-links">
+        <li><a href="/about/">About Us</a></li>
+        <li><a href="/products/">Products</a></li>
+        <li><a href="/partners/">Partners</a></li>
+        <li><a href="/contact/">Contact</a></li>
+    </ul>
 </div>
