--- a/templates/home.html
+++ b/templates/home.html
@@ -54,19 +54,19 @@
             
             <div class="products-container">
                 <div class="product">
-                    <img src="{% static 'images/classic.jpg' %}" alt="Zupra Classic" class="product-image">
+                    <img src="{% static 'img/classic.jpg' %}" alt="Zupra Classic" class="product-image">
                     <h3 class="product-title">Classic Edition</h3>
                     <p>Our signature blend with interactive cocktail recipes and mixology tips</p>
                 </div>
                 
                 <div class="product">
-                    <img src="{% static 'images/sparkling.jpg' %}" alt="Zupra Sparkling" class="product-image">
+                    <img src="{% static 'img/sparkling.jpg' %}" alt="Zupra Sparkling" class="product-image">
                     <h3 class="product-title">Sparkling Edition</h3>
                     <p>Elegant sparkling beverage with exclusive virtual event access</p>
                 </div>
                 
                 <div class="product">
-                    <img src="{% static 'images/reserve.jpg' %}" alt="Zupra Reserve" class="product-image">
+                    <img src="{% static 'img/reserve.jpg' %}" alt="Zupra Reserve" class="product-image">
                     <h3 class="product-title">Reserve Collection</h3>
                     <p>Ultra-premium limited edition with NFT collectibles</p>
                 </div>
