--- a/templates/home.html
+++ b/templates/home.html
@@ -45,7 +45,12 @@
             </div>
         </div>
     </section>
+    
 
+
+
+
+{% comment %}     
     <!-- Products Section -->
     <section id="products" class="products">
         <div class="container">
@@ -72,7 +77,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> {% endcomment %}
 
     <!-- Partners Section -->
     <section class="partners">
